<resources>
    <string name="app_name">GMSAdmin</string>
    <string name="progress_loading">Loading…</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="empty" />
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="empty_entry">Field cannot be empty</string>
    <string name="mismatch_entry">Password mismatch</string>
    <string name="error_email">Enter a valid Email address</string>
    <string name="error_number">Mobile number is required to send OTP</string>
    <string name="error_number_min">Mobile number must be 10 digits</string>
    <string name="error_password">Enter a valid password</string>
    <string name="error_password_min">Password must be at least 6 digits</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="constituency_id">Constituency ID</string>
    <string name="id_content">Please enter the Constituency Id given to you for login</string>
    <string name="start">Let’s get started</string>
    <string name="login_txt">An OTP will be send to your mobile number entered</string>
    <string name="use_mail">Use Mail Id</string>
    <string name="use_phone">Use Phone Number</string>
    <string name="login_text">Login to your Account</string>
    <string name="select_constituency">Select Constituency</string>
    <string name="select_area">Select Paguthi</string>
    <string name="select_constituency_alert">Please select constituency before proceeding</string>
    <string name="phone_no">Phone number</string>
    <string name="mail">Email</string>
    <string name="password">Password</string>
    <string name="verification_title">OTP</string>
    <string name="verification_heading">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="verification_content">We\'ve sent a 4 digit code to your phone number. Please enter the verification code.</string>
    <string name="not_received">Didn\'t receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="lets_go">Login</string>
    <string name="side_menu_dash">Dashboard</string>
    <string name="side_menu_constituent">Constituents</string>
    <string name="side_menu_constituent_sub_one">Constituent</string>
    <string name="side_menu_constituent_sub_two">Meetings</string>
    <string name="side_menu_grievance">Grievances</string>
    <string name="side_menu_staff">Staffs</string>
    <string name="side_menu_report">Report</string>
    <string name="side_menu_settings">Settings</string>
    <string name="side_menu_logout">Logout</string>
    <string name="search">Search</string>
    <string name="constituent_count">Constituent Count</string>
    <string name="openBrace">(</string>
    <string name="closeBrace">)</string>
    <string name="footfall_count">Footfall Count</string>
    <string name="volunteer_count">Volunteer Count</string>
    <string name="total_meetings">Meeting Count</string>
    <string name="total_grievances">Grievance Count</string>
    <string name="total_greetings">Greetings Count</string>
    <string name="total_videos">Video Count</string>
    <string name="people">Constituents</string>
    <string name="meetings">Meetings</string>
    <string name="grievances">Grievances</string>
    <string name="questions">Questions</string>
    <string name="foot_fall">Foot Fall Graph</string>
    <string name="grievance_graph">Grievance Progress Report</string>
    <string name="meetings_graph">Constituent Meetings Report</string>
    <string name="view_more">View Reviews</string>
    <string name="graph">Graph</string>
    <string name="total_male">Male</string>
    <string name="total_female">Female</string>
    <string name="total_transgender">Transgender</string>
    <string name="hv_phone_no">Having Phone no</string>
    <string name="hv_whapp_no">Having Whatsapp</string>
    <string name="whapp_bcast">Whatsapp Broadcast</string>
    <string name="hv_mail_id">Having Email ID</string>
    <string name="no_od_voter">Having Voter ID</string>
    <string name="dob_up">DOB Updated</string>
    <string name="no_of_aadhaar">No. of Aadhaar Card</string>
    <string name="unique_ct">Unique Footfall Count</string>
    <string name="total_foot_ct">Total Footfall Count</string>
    <string name="paguthi_1_ct">Singanallur Footfall Count</string>
    <string name="other_paguthi">Other Footfall Count</string>
    <string name="paguthi">Singanallur</string>
    <string name="other">Others</string>
    <string name="unique">Unique</string>
    <string name="repeat">Repeat</string>
    <string name="total_requested">Meetings Requested</string>
    <string name="total_completed">Meetings Completed</string>
    <string name="total_constituency">Constituency</string>
    <string name="total_non_constituency">Non-Constituency</string>
    <string name="birthDay">Birthday Wishes</string>
    <string name="festival">Festival Wishes</string>
    <string name="select_festival">Select Festival</string>
    <string name="diwali">Diwali</string>
    <string name="christmas">Christmas</string>
    <string name="ramzan">Ramzan</string>
    <string name="office_1">Singanallur office 1</string>
    <string name="office_2">Singanallur office 2</string>
    <string name="office_3">Singanallur office 3</string>
    <string name="overall_count">Overall Grievance Count</string>
    <string name="petition_count">Petition</string>
    <string name="on_petition">Online Petition</string>
    <string name="civic_petition">Civic Petition</string>
    <string name="enquiry_count">Enquiry</string>
    <string name="requested">Requested</string>
    <string name="schedule">Scheduled</string>
    <string name="complete">Completed</string>
    <string name="reject">Rejected</string>
    <string name="pending">Pending</string>
    <string name="online">Online</string>
    <string name="civic">Civic</string>
    <string name="know_this">Know this Person</string>
    <string name="gms_interaction">GMS interaction</string>
    <string name="nrc">NRC</string>
    <string name="citizen">Citizenship</string>
    <string name="cross">Cross Level</string>
    <string name="no_constituent_added">No constituent has been added to this Paguthi yet</string>
    <string name="no_staff_added">No staff has been added yet</string>
    <string name="no_document_added">No document has been added for this constituent yet</string>
    <string name="no_meeting_added">No meeting has been added for this constituent yet</string>
    <string name="no_grievance_added">No grievance has been added in this Paguthi yet</string>
    <string name="constituent_title">Constituent</string>
    <string name="ward_no">Ward Number</string>
    <string name="serial_no">Serial Number</string>
    <string name="voter_id">Voter ID</string>
    <string name="aadhaar_no">Aadhaar Number</string>
    <string name="meeting">Meeting</string>
    <string name="grievance">Grievance</string>
    <string name="interaction">Interaction</string>
    <string name="plant">Plants</string>
    <string name="doc">Documents</string>
    <string name="view_profile">View Profile</string>
    <string name="plant_donation_title">Plant Donation</string>
    <string name="plant_name_txt">Plant Name</string>
    <string name="plant_count_txt">Plant Count</string>
    <string name="plant_date_txt">Received On</string>
    <string name="meeting_title">Meetings</string>
    <string name="meeting_detail">Meetings Details</string>
    <string name="meeting_detail_title">Details of Meeting</string>
    <string name="no_grievance">No grievance found</string>
    <string name="grievance_title">Grievances</string>
    <string name="grievance_detail_title">Details of Grievance</string>
    <string name="grievance_detail_title_alt">Grievance Details</string>
    <string name="seeker_type">Seeker Type</string>
    <string name="created_on">Created On</string>
    <string name="updated_on">Updated On</string>
    <string name="description">Description</string>
    <string name="reference">Reference Number</string>
    <string name="user">Super Admin</string>
    <string name="created">Created By</string>
    <string name="req_date">Requested On</string>
    <string name="meet_date">Meeting Date</string>
    <string name="all">All</string>
    <string name="petition">Petition</string>
    <string name="enquiry">Enquiry</string>
    <string name="petition_num">Petition Number</string>
    <string name="enquiry_num">Enquiry Number</string>
    <string name="view_message">View Message History</string>
    <string name="interaction_title">Interaction Question</string>
    <string name="msg_history_title">Message History</string>
    <string name="doc_constituent">Constituent Documents</string>
    <string name="doc_grievance">Grievance Documents</string>
    <string name="doc_download">Download</string>
    <string name="profile_title">Constituency Profile</string>
    <string name="profile">Profile Info</string>
    <string name="constituency">Constituency Info</string>
    <string name="interaction_tav">Interaction</string>
    <string name="father_or_husband">Father or husband Name</string>
    <string name="guardian">Guardian name</string>
    <string name="email">Email ID</string>
    <string name="phone">Phone Number</string>
    <string name="whatsapp">Whatsapp Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="religion">Religion</string>
    <string name="address">Address</string>
    <string name="pin">Pincode</string>
    <string name="voterid">Voter ID</string>
    <string name="aadhaar">Aadhaar Number</string>
    <string name="general">General Setting</string>
    <string name="change_user">Change Users</string>
    <string name="share">Share app</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_alert">Do you really want to signout?</string>
    <string name="constituency_name">Paguthi Name</string>
    <string name="ward">Ward</string>
    <string name="booth">Booth Name</string>
    <string name="booth_address">Booth Address</string>
    <string name="serial">Serial Number</string>
    <string name="role">Role</string>
    <string name="staff_detail_title">Staff Detail</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="location">Location</string>
    <string name="birthday">Birthday Letter</string>
    <string name="staff">Staff</string>
    <string name="constituent">Constituent</string>
    <string name="video">Video</string>
    <string name="acc_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="gen_settings">General Settings</string>
    <string name="about">About GMS</string>
    <string name="terms">Terms &amp; condition</string>
    <string name="privacy">Privacy &amp; Security</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save_profile">Save Profile</string>
</resources>